applications/kubernetes/external-routes/srv-plg-1/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: srv-plg-1
subsets:
- addresses:
  - ip: 10.10.20.11
  ports:
  - name: websecure
    port: 443
